primo commit a metà compito

--- a/index.html
+++ b/index.html
@@ -3,7 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>U1 S1 D2</title>
+    <title>U1-S1-D2</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Sviluppo di una pagina web - Blog EPICODE</h1>
+      <p>Primi passi operativi per creare un modello di pagina HTML per un post scopri come iniziare in modo facile</p>
+    </header>
+    <div>
+      <img src="logo.svg" />
+      <p>EPICODE - Il blog dei developers</p>
+    </div>
+    <nav>
+      <p>HOME ARTICOLI LAVORA CON NOI</p>
+    </nav>
+    <section><h2>Come creare un tamplate per i post di mario rossi - pubblicato il 25-10-2020</h2></section>
+    <article>
+      <p>
+        La prima cosa da fare é suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a
+        tutte le pagine
+      </p>
+      <br />
+
+      <ul>
+        <h3>Le varie aree sranno suddivise in:</h3>
+        <li>contenuti di intestazione del tag &lt;header&gt;</li>
+        <li>contenuti centrali variabili del tag &lt;main&gt; (corpo principale)</li>
+        <li>contenuti di fine pagina comuni,da inserire nel tag &lt;footer&gt;</li>
+      </ul>
+      <br />
+      <p>Formattazione del codice</p>
+      <br />
+      <ol>
+        <h3>
+          il testo dell'articolo dovra essere formattato per identificare tutte le parti da selezionare con CSS. Perciò
+          ipassi saranno:
+        </h3>
+        <li>Progettare il markup assegnando ad ogni specifico testo il tag appropriato</li>
+        <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto vero il basso</li>
+        <li>Applicare gli stili CSS</li>
+      </ol>
+      <p>L'applicazione di stili CSS é cresciuta negli anni fino a raggiungere la diffusione pressochè totlae</p>
+      <table border="2">
+        <caption>
+          Diffusione dei CSS
+        </caption>
+        <tr>
+          <th>Anno</th>
+          <th>% di utilizzo</th>
+          <th>Supporto browsers</th>
+        </tr>
+        <tr>
+          <td>2000</td>
+          <td>20%</td>
+          <td>17%</td>
+        </tr>
+        <tr>
+          <td>2002</td>
+          <td>35%</td>
+          <td>22%</td>
+        </tr>
+        <tr>
+          <td>2004</td>
+          <td>45%</td>
+          <td>42%</td>
+        </tr>
+        <tr>
+          <td>2008</td>
+          <td>80%</td>
+          <td>51%</td>
+        </tr>
+        <tr>
+          <td>2012</td>
+          <td>100%</td>
+          <td>76%</td>
+        </tr>
+      </table>
+      <p>
+        Un test di validazione potrà essere fatto tramite il tool online ------- dedicato allo scopo. Una volta
+        ottimizzato iltutto,avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:
+      </p>
+    </article>
+  </body>
 </html>
