--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li>Applicare gli stili CSS</li>
       </ol>
       <p>L'applicazione di stili CSS é cresciuta negli anni fino a raggiungere la diffusione pressochè totlae</p>
-      <table border="2">
+      <table>
         <caption>
           Diffusione dei CSS
         </caption>
@@ -80,9 +80,41 @@
         </tr>
       </table>
       <p>
-        Un test di validazione potrà essere fatto tramite il tool online ------- dedicato allo scopo. Una volta
-        ottimizzato iltutto,avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:
+        Un test di validazione potrà essere fatto tramite il tool online
+        <a href="https://www.google.it/" target="_blank">clicca qui</a> dedicato allo scopo. Una volta ottimizzato
+        iltutto,avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:
       </p>
+      <iframe src="https://www.youtube.com/embed/PGh00IIzdBs" width="600" height="300"> </iframe>
     </article>
+    <br />
+    <hr />
+    <h3>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</h3>
+    <form>
+      <leable for="email">Inserisci email:</leable>
+      <input id="email" type="email" placeholder="inserisci la tua email" />
+      <br />
+      <button type="submit">Iscriviti!!</button>
+    </form>
+    <div>
+      <p>Articoli correlati</p>
+      <p>Validare il codice HTML</p>
+      <p>Categoria:develop</p>
+      <p>Data:19-9-2020</p>
+      <br />
+      <p>Corregere la sintassi</p>
+      <p>Categoria: develop</p>
+      <p>Data: 16-9-2020</p>
+      <br />
+      <p>Meno Kb nella pagina</p>
+      <p>Categoria: ottimizzazione</p>
+      <p>Data:30-9-2020</p>
+    </div>
+    <footer>
+      <p>Blog EPICODE &copy;2023</p>
+      <address>
+        Testata online di Mario Rossi, registrata conprot. n.213/2018-via Luigi Einaldi 2-Milano. P.IVA 00112233.
+      </address>
+      <address>info@epicode.school <a href="https://www.google.it/" target="_blank">clicca qui</a></address>
+    </footer>
   </body>
 </html>
