--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <address>
         Testata online di Mario Rossi, registrata conprot. n.213/2018-via Luigi Einaldi 2-Milano. P.IVA 00112233.
       </address>
-      <address>info@epicode.school <a href="https://www.google.it/" target="_blank">clicca qui</a></address>
+      <address><a href=" mailto:info@epicode.school" target="_blank">info@epicode.school clicca qui</a></address>
     </footer>
   </body>
 </html>
